fix: dates of crop data now show and create correctly

--- a/src/app/dashboard/components/dialogForms/crop-data-form/crop-data-form.component.html
+++ b/src/app/dashboard/components/dialogForms/crop-data-form/crop-data-form.component.html
@@ -99,13 +99,13 @@
         <p-calendar
           id="plantationDate"
           appendTo="body"
-          formControlName="collectionDate"
+          formControlName="plantationDate"
           [iconDisplay]="'input'"
           [showIcon]="true"
           inputStyleClass="w-full bg-gray-200 p-2"
           styleClass="w-full"
           inputId="icondisplay"
-          dateFormat="dd/mm/yyyy"/>
+          dateFormat="dd/mm/yy"/>
         <label for="plantationDate">Fecha de plantación</label>
       </p-floatLabel>
 
